# vromfs

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg
docs/source/: bin.rst  conf.py  data_block.rst  index.rst  vromfs.rst
docs/source/diagrams/: BinExtHeader.drawio  BinHeader.drawio  BinHeader.packed.drawio  checked_dump.drawio  checked_simple_uncompressed_checked_dump.drawio  container_with_extended_header.drawio  container_with_simple_header.drawio  image.drawio  unchecked_extended_compressed_checked_dump.drawio
src/vromfs/: __init__.py  common.py  constructor.py  obfs_reader.py  parser.py  ranged_reader.py  reader.py  vromfs_bin_file.py
src/vromfs/constructor/: common.py  eager.py  error.py  lazy.py
src/vromfs/demo/: vromfs_bin_packer.py  vromfs_bin_unpacker.py
src/vromfs/files/: common.py  names.py  ng_common.py  shared_names.py
src/vromfs/vromfs/: __init__.py  common.py  error.py  vromfs_file.py
tests/: conftest.py
tests/demo/: vromfs_bin_repacker.py  vromfs_bin_unpacker.py
tests/helpers/: __init__.py  make_samples.py  unbin.py  unvromfs.py
tests/samples/: nm  unchecked.vromfs
tests/test_vromfs/: __init__.py  conftest.py
tests/test_vromfs/test_bin/: conftest.py
tests/test_vromfs/test_constructor/: conftest.py
tests/test_vromfs/test_obfs_reader/: test_obfs_reader.py
tests/test_vromfs/test_parser/: __init__.py
tests/test_vromfs/test_ranged_reader/: test_ranged_reader.py
tests/test_vromfs/test_reader/: test_ranged_reader.py
(+87 files in other folders)
