[metadata]
name = vromfs
author = kotiq
author_email = courier.yeti@gmail.com
url = https://github.com/kotiq/vromfs

[options]
python_requires = >= 3.7
package_dir=
    =src
packages=find:

install_requires =
    construct==2.9.44
    zstandard==0.15.1
    blk @ git+https://github.com/kotiq/blk@e94bfa9

[options.packages.find]
where=src
